--- a/KScriptWin.csproj
+++ b/KScriptWin.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>False</UseWindowsForms>
+    <ApplicationIcon>Icon\KScriptWin.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +23,10 @@
     <None Remove="Icon\StatusHelp.png" />
     <None Remove="Icon\StatusHelpOutline.png" />
     <None Remove="Icon\Stop.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Icon\KScriptWin.ico" />
   </ItemGroup>
 
   <ItemGroup>
