3Dグラフィック機能追加、関数名の見直し他

--- a/App.config
+++ b/App.config
@@ -40,6 +40,18 @@
             <setting name="GraphViewHeight" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="Plot3DViewTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Plot3DViewLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Plot3DViewWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Plot3DViewHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
         </KScriptWin.Properties.Settings>
     </userSettings>
 </configuration>
